--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.7.1",
+    "bson": "^4.7.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "D": "^1.0.0",
     "prisma": "^4.7.1",
     "reflect-metadata": "^0.1.13",
@@ -54,22 +57,5 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
